jobs bg to full width, fixed breakpoint overlapping, reduced main content horizontal padding

--- a/sites/all/themes/fj16/sass/_main-content.scss
+++ b/sites/all/themes/fj16/sass/_main-content.scss
@@ -112,7 +112,7 @@ div.messages {
 }
 
 #content {
-  padding: 100px 200px;
+  padding: 100px;
 
   @include respond(medium) {
     padding: 75px 100px;
